jsonapi_core/tests/compile_fail/conflicting_annotations.rs
use jsonapi_core::JsonApi;

#[derive(JsonApi)]
#[jsonapi(type = "things")]
struct Bad {
    #[jsonapi(id, relationship)]
    id: String,
}

fn main() {}
